// Vitest Snapshot v1

exports[`Circle > should render 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-1uikp8r"
  />
</div>
`;

exports[`Circle > should render as avatar 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-1sjiwh4"
  />
</div>
`;

exports[`Circle > should render extra-large 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-12m2ikc"
  />
</div>
`;

exports[`Circle > should render large 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-14jhlj1"
  />
</div>
`;

exports[`Circle > should render small 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-1ufh3s9"
  />
</div>
`;

exports[`Circle > should render with content 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-1ufh3s9"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle > should render with no shadow 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-459u9r"
  />
</div>
`;
